# lsi-systems

./: README.md  lsi-systems.cabal  stack.yaml
app/: deriche.hs
src/: LSI.hs
src/LSI/: AccuracyModel.hs  Examples.hs  FrequencyResponse.hs  Grid.hs  ImpulseResponse.hs  RationalFunction.hs  System.hs  TransferFunction.hs
src/LSI/Graph/: Fgl.hs  Graphviz.hs
test/: Spec.hs
test/Spec/: SimplTest.hs
