name:                lsi-systems
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gdeest/lsi-systems#readme
license:             BSD3
license-file:        LICENSE
author:              Gaël Deest
maintainer:          gael.deest@gmail.com
copyright:           2017 Gaël Deest
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LSI
                     , LSI.Examples
                     , LSI.RationalFunction
                     , LSI.System
                     , LSI.TransferFunction
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , data-reify
                     , linear
                     , memoize
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gdeest/lsi-systems
